Added new MDIterator unit tests
The tests do not explicitly instantiate the MDIterator class, but
rather MDArray<T>::iterator, MDArrayView<T>::iterator, and
MDArrayRCP<T>::iterator.  I test the various constructors, the begin()
and end() methods of the MDArray classes, iteration on a sub-array,
and iteration order depending on storage order.

--- a/test/MDArray/CMakeLists.txt
+++ b/test/MDArray/CMakeLists.txt
@@ -56,6 +56,19 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   STANDARD_PASS_OUTPUT
   )
 
+# Unit test the MDIterator class
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  MDIterator_UnitTests
+  SOURCES
+    MDIterator_UnitTests.cpp
+    MDArray_UnitTest_helpers.hpp
+    ${TEUCHOS_STD_UNIT_TEST_MAIN}
+  COMM serial mpi
+  NUM_MPI_PROCS 1
+  ARGS --teuchos-suppress-startup-banner
+  STANDARD_PASS_OUTPUT
+  )
+
 # Performance test the MDArray class
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
   MDArray_PerformanceTests
