--- a/test/MDArray/CMakeLists.txt
+++ b/test/MDArray/CMakeLists.txt
@@ -69,6 +69,19 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   STANDARD_PASS_OUTPUT
   )
 
+# Unit test the MDRevIterator class
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  MDRevIterator_UnitTests
+  SOURCES
+    MDRevIterator_UnitTests.cpp
+    MDArray_UnitTest_helpers.hpp
+    ${TEUCHOS_STD_UNIT_TEST_MAIN}
+  COMM serial mpi
+  NUM_MPI_PROCS 1
+  ARGS --teuchos-suppress-startup-banner
+  STANDARD_PASS_OUTPUT
+  )
+
 # Performance test the MDArray class
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
   MDArray_PerformanceTests
