Changed Domi_MDArray_Utils to Domi_Utils
The utility functions now include help for the MDComm class, so the
name change was warranted.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,12 +25,13 @@ APPEND_SET(HEADERS
   Domi_MDArray.hpp
   Domi_MDArrayRCP.hpp
   Domi_MDArrayView.hpp
-  Domi_MDArray_Utils.hpp
+  Domi_Utils.hpp
   Domi_Slice.hpp
   )
 
 APPEND_SET(SOURCES
   Domi_Version.cpp
+  Domi_Utils.cpp
   Domi_Slice.cpp
   )
 
