Added MDComm unit tests to the build system
These tests all use the same executable, but with different command
line arguments to specify the number of dimensions and the number of
processors along each axis.  I also attempt to put tight controls on
the number of processors.

There is one test, that specifies "NUM_MPI_PROCS 6", that does not run
on my 4-processor laptop.  Brent says that it should run, so this may
be a cmake/ctest bug.

--- a/test/MDComm/CMakeLists.txt
+++ b/test/MDComm/CMakeLists.txt
@@ -5,15 +5,37 @@ INCLUDE(TribitsAddExecutableAndTest)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
-# Unit test the Slice class
+# Unit test the MDComm class
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
-  MDComm_UnitTests
+  MDComm_UnitTests_1D_2
   SOURCES
     MDComm_UnitTests.cpp
     ${TEUCHOS_STD_UNIT_TEST_MAIN}
-  COMM serial mpi
-  NUM_MPI_PROCS 1
-  ARGS --teuchos-suppress-startup-banner
+  COMM mpi
+  NUM_MPI_PROCS 2
+  ARGS "--teuchos-suppress-startup-banner --numDims=1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  MDComm_UnitTests_1D_6
+  SOURCES
+    MDComm_UnitTests.cpp
+    ${TEUCHOS_STD_UNIT_TEST_MAIN}
+  COMM mpi
+  NUM_MPI_PROCS 6
+  ARGS "--teuchos-suppress-startup-banner --numDims=1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  MDComm_UnitTests_2D_4
+  SOURCES
+    MDComm_UnitTests.cpp
+    ${TEUCHOS_STD_UNIT_TEST_MAIN}
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisSizes=2,-1"
   STANDARD_PASS_OUTPUT
   )
 
