Added Sub-communicator unit tests

--- a/test/MDComm/CMakeLists.txt
+++ b/test/MDComm/CMakeLists.txt
@@ -39,6 +39,28 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   STANDARD_PASS_OUTPUT
   )
 
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  MDComm_SubcommTest_1D_1
+  SOURCES
+    MDComm_SubcommTest.cpp
+    ${TEUCHOS_STD_UNIT_TEST_MAIN}
+  COMM mpi
+  NUM_MPI_PROCS 1
+  ARGS "--teuchos-suppress-startup-banner --numDims=1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  MDComm_SubcommTest_1D_2
+  SOURCES
+    MDComm_SubcommTest.cpp
+    ${TEUCHOS_STD_UNIT_TEST_MAIN}
+  COMM mpi
+  NUM_MPI_PROCS 2
+  ARGS "--teuchos-suppress-startup-banner --numDims=1"
+  STANDARD_PASS_OUTPUT
+  )
+
 #TRIBITS_COPY_FILES_TO_BINARY_DIR(target_name
 #  SOURCE_FILES source_files
 #  EXEDEPS exedeps
