--- a/test/MDMap/CMakeLists.txt
+++ b/test/MDMap/CMakeLists.txt
@@ -19,7 +19,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_1D_1
   COMM mpi
   NUM_MPI_PROCS 1
-  ARGS "--teuchos-suppress-startup-banner --numDims=1 --axisSizes=1"
+  ARGS "--teuchos-suppress-startup-banner --numDims=1 --axisCommSizes=1"
   STANDARD_PASS_OUTPUT
   )
 
@@ -28,7 +28,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_1D_2
   COMM mpi
   NUM_MPI_PROCS 2
-  ARGS "--teuchos-suppress-startup-banner --numDims=1 --axisSizes=2"
+  ARGS "--teuchos-suppress-startup-banner --numDims=1 --axisCommSizes=2"
   STANDARD_PASS_OUTPUT
   )
 
@@ -37,7 +37,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_1D_4
   COMM mpi
   NUM_MPI_PROCS 4
-  ARGS "--teuchos-suppress-startup-banner --numDims=1 --axisSizes=4"
+  ARGS "--teuchos-suppress-startup-banner --numDims=1 --axisCommSizes=4"
   STANDARD_PASS_OUTPUT
   )
 
@@ -46,7 +46,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_1D_6
   COMM mpi
   NUM_MPI_PROCS 6
-  ARGS "--teuchos-suppress-startup-banner --numDims=1 --axisSizes=6"
+  ARGS "--teuchos-suppress-startup-banner --numDims=1 --axisCommSizes=6"
   STANDARD_PASS_OUTPUT
   )
 
@@ -55,7 +55,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_2D_1
   COMM mpi
   NUM_MPI_PROCS 1
-  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisSizes=1,1"
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=1,1"
   STANDARD_PASS_OUTPUT
   )
 
@@ -64,7 +64,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_2D_2
   COMM mpi
   NUM_MPI_PROCS 2
-  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisSizes=1,2"
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=1,2"
   STANDARD_PASS_OUTPUT
   )
 
@@ -73,7 +73,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_2D_4
   COMM mpi
   NUM_MPI_PROCS 4
-  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisSizes=2,2"
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=2,2"
   STANDARD_PASS_OUTPUT
   )
 
@@ -82,7 +82,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_2D_8
   COMM mpi
   NUM_MPI_PROCS 8
-  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisSizes=2,4"
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=2,4"
   STANDARD_PASS_OUTPUT
   )
 
@@ -91,7 +91,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_2D_16
   COMM mpi
   NUM_MPI_PROCS 16
-  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisSizes=4,4"
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=4,4"
   STANDARD_PASS_OUTPUT
   )
 
@@ -100,7 +100,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_3D_1
   COMM mpi
   NUM_MPI_PROCS 1
-  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisSizes=1,1,1"
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1,1"
   STANDARD_PASS_OUTPUT
   )
 
@@ -109,7 +109,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_3D_2
   COMM mpi
   NUM_MPI_PROCS 2
-  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisSizes=1,2,1"
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,2,1"
   STANDARD_PASS_OUTPUT
   )
 
@@ -118,7 +118,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_3D_4
   COMM mpi
   NUM_MPI_PROCS 4
-  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisSizes=2,1,2"
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,1,2"
   STANDARD_PASS_OUTPUT
   )
 
@@ -127,7 +127,7 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_3D_8
   COMM mpi
   NUM_MPI_PROCS 8
-  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisSizes=2,2,2"
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,2,2"
   STANDARD_PASS_OUTPUT
   )
 
@@ -136,6 +136,6 @@ TRIBITS_ADD_TEST(
   NAME MDMap_UnitTests_3D_16
   COMM mpi
   NUM_MPI_PROCS 16
-  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisSizes=4,2,2"
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,2,2"
   STANDARD_PASS_OUTPUT
   )
