--- a/cmake/Domi_config.h.in
+++ b/cmake/Domi_config.h.in
@@ -85,3 +85,9 @@
 
 /* Define to 1 if you have the ANSI C header files. */
 #cmakedefine STDC_HEADERS
+
+/* Define if Epetra is enabled */
+#cmakedefine HAVE_EPETRA
+
+/* Define if Tpetra is enabled */
+#cmakedefine HAVE_TPETRA
