Added HAVE_EPETRA and HAVE_TPETRA macros

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,18 @@
 # Include the TriBITS library macros
 INCLUDE(TribitsLibraryMacros)
 
+#
+# Package-specific configuration options
+IF(Domi_ENABLE_Epetra)
+  SET(HAVE_EPETRA ON)
+ENDIF()
+
+IF(Domi_ENABLE_Tpetra)
+  SET(HAVE_TPETRA ON)
+ENDIF()
+
+#
+# Set the Domi_ORDINAL_TYPE
 SET(${PACKAGE_NAME}_ORDINAL_TYPE ptrdiff_t
   CACHE STRING
   "Select the data type for Domi_Ordinal (Domi::Ordinal)."
