--- a/test/MDMap/CMakeLists.txt
+++ b/test/MDMap/CMakeLists.txt
@@ -52,7 +52,7 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDMap_UnitTests
-  NAME MDMap_UnitTests_2D_1
+  NAME MDMap_UnitTests_2D_1_1
   COMM mpi
   NUM_MPI_PROCS 1
   ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=1,1"
@@ -61,7 +61,7 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDMap_UnitTests
-  NAME MDMap_UnitTests_2D_2
+  NAME MDMap_UnitTests_2D_1_2
   COMM mpi
   NUM_MPI_PROCS 2
   ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=1,2"
@@ -70,7 +70,25 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDMap_UnitTests
-  NAME MDMap_UnitTests_2D_4
+  NAME MDMap_UnitTests_2D_2_1
+  COMM mpi
+  NUM_MPI_PROCS 2
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=2,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_2D_1_4
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=1,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_2D_2_2
   COMM mpi
   NUM_MPI_PROCS 4
   ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=2,2"
@@ -79,7 +97,25 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDMap_UnitTests
-  NAME MDMap_UnitTests_2D_8
+  NAME MDMap_UnitTests_2D_4,1
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=4,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_2D_1_8
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=1,8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_2D_2_4
   COMM mpi
   NUM_MPI_PROCS 8
   ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=2,4"
@@ -88,7 +124,43 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDMap_UnitTests
-  NAME MDMap_UnitTests_2D_16
+  NAME MDMap_UnitTests_2D_4_2
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=4,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_2D_8_1
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=8,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_2D_1_16
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=1,16"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_2D_2_8
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=2,8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_2D_4_4
   COMM mpi
   NUM_MPI_PROCS 16
   ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=4,4"
@@ -97,7 +169,25 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDMap_UnitTests
-  NAME MDMap_UnitTests_3D_1
+  NAME MDMap_UnitTests_2D_8_2
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=8,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_2D_16_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=16,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_1_1
   COMM mpi
   NUM_MPI_PROCS 1
   ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1,1"
@@ -106,7 +196,16 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDMap_UnitTests
-  NAME MDMap_UnitTests_3D_2
+  NAME MDMap_UnitTests_3D_1_1_2
+  COMM mpi
+  NUM_MPI_PROCS 2
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_2_1
   COMM mpi
   NUM_MPI_PROCS 2
   ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,2,1"
@@ -115,7 +214,43 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDMap_UnitTests
-  NAME MDMap_UnitTests_3D_4
+  NAME MDMap_UnitTests_3D_2_1_1
+  COMM mpi
+  NUM_MPI_PROCS 2
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,1,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_1_4
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_2_2
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,2,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_4_1
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,4,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_2_1_2
   COMM mpi
   NUM_MPI_PROCS 4
   ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,1,2"
@@ -124,7 +259,70 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDMap_UnitTests
-  NAME MDMap_UnitTests_3D_8
+  NAME MDMap_UnitTests_3D_2_2_1
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,2,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_4_1_1
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,1,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_1_8
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1,8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_2_4
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,2,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_4_2
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,4,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_8_1
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,8,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_2_1_4
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,1,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_2_2_2
   COMM mpi
   NUM_MPI_PROCS 8
   ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,2,2"
@@ -133,9 +331,171 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDMap_UnitTests
-  NAME MDMap_UnitTests_3D_16
+  NAME MDMap_UnitTests_3D_2_4_1
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,4,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_4_1_2
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,1,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_4_2_1
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,2,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_8_1_1
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=8,1,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_1_16
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1,16"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_2_8
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,2,8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_4_4
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,4,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_8_2
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,8,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_1_16_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,16,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_2_1_8
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,1,8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_2_2_4
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,2,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_2_4_2
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,4,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_2_8_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,8,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_4_1_4
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,1,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_4_2_2
   COMM mpi
   NUM_MPI_PROCS 16
   ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,2,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_4_4_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,4,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_8_1_2
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=8,1,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_8_2_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=8,2,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDMap_UnitTests
+  NAME MDMap_UnitTests_3D_16_1_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=16,1,1"
   STANDARD_PASS_OUTPUT
   )
