--- a/test/MDComm/CMakeLists.txt
+++ b/test/MDComm/CMakeLists.txt
@@ -52,7 +52,7 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDComm_UnitTests
-  NAME MDComm_UnitTests_2D_1
+  NAME MDComm_UnitTests_2D_1_1
   COMM mpi
   NUM_MPI_PROCS 1
   ARGS "--teuchos-suppress-startup-banner --numDims=2"
@@ -61,7 +61,7 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDComm_UnitTests
-  NAME MDComm_UnitTests_2D_2
+  NAME MDComm_UnitTests_2D_1_2
   COMM mpi
   NUM_MPI_PROCS 2
   ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=-1,2"
@@ -70,7 +70,25 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDComm_UnitTests
-  NAME MDComm_UnitTests_2D_4
+  NAME MDComm_UnitTests_2D_2_1
+  COMM mpi
+  NUM_MPI_PROCS 2
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_2D_1_4
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=1,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_2D_2_2
   COMM mpi
   NUM_MPI_PROCS 4
   ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=2,-1"
@@ -79,7 +97,34 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDComm_UnitTests
-  NAME MDComm_UnitTests_2D_8
+  NAME MDComm_UnitTests_2D_4_1
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_2D_1_8
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_2D_2_4
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_2D_4_2
   COMM mpi
   NUM_MPI_PROCS 8
   ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=4"
@@ -88,7 +133,34 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDComm_UnitTests
-  NAME MDComm_UnitTests_2D_16
+  NAME MDComm_UnitTests_2D_8_1
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_2D_1_16
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_2D_2_8
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_2D_4_4
   COMM mpi
   NUM_MPI_PROCS 16
   ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=4"
@@ -97,7 +169,25 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDComm_UnitTests
-  NAME MDComm_UnitTests_3D_1
+  NAME MDComm_UnitTests_2D_8_2
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_2D_16_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=2 --axisCommSizes=16"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_1_1
   COMM mpi
   NUM_MPI_PROCS 1
   ARGS "--teuchos-suppress-startup-banner --numDims=3"
@@ -106,25 +196,133 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDComm_UnitTests
-  NAME MDComm_UnitTests_3D_2
+  NAME MDComm_UnitTests_3D_1_1_2
   COMM mpi
   NUM_MPI_PROCS 2
-  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1,2"
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1"
   STANDARD_PASS_OUTPUT
   )
 
 TRIBITS_ADD_TEST(
   MDComm_UnitTests
-  NAME MDComm_UnitTests_3D_4
+  NAME MDComm_UnitTests_3D_1_2_1
+  COMM mpi
+  NUM_MPI_PROCS 2
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_2_1_1
+  COMM mpi
+  NUM_MPI_PROCS 2
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,1,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_1_4
   COMM mpi
   NUM_MPI_PROCS 4
-  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,2,2"
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1"
   STANDARD_PASS_OUTPUT
   )
 
 TRIBITS_ADD_TEST(
   MDComm_UnitTests
-  NAME MDComm_UnitTests_3D_8
+  NAME MDComm_UnitTests_3D_1_2_2
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_4_1
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_2_1_2
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_2_2_1
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_4_1_1
+  COMM mpi
+  NUM_MPI_PROCS 4
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_1_8
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_2_4
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_4_2
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_8_1
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_2_1_8
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_2_2_4
   COMM mpi
   NUM_MPI_PROCS 8
   ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,2"
@@ -133,14 +331,171 @@ TRIBITS_ADD_TEST(
 
 TRIBITS_ADD_TEST(
   MDComm_UnitTests
-  NAME MDComm_UnitTests_3D_16
+  NAME MDComm_UnitTests_3D_2_4_1
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_4_1_2
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_4_2_1
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_8_1_1
+  COMM mpi
+  NUM_MPI_PROCS 8
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_1_16
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_2_8
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_4_4
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_8_2
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_1_16_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=1,16"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_2_1_8
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_2_2_4
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_2_4_2
   COMM mpi
   NUM_MPI_PROCS 16
   ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,4"
   STANDARD_PASS_OUTPUT
   )
 
-#TRIBITS_COPY_FILES_TO_BINARY_DIR(target_name
-#  SOURCE_FILES source_files
-#  EXEDEPS exedeps
-#  )
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_2_8_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=2,8"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_4_1_4
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_4_2_2
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_4_4_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=4,4"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_8_1_2
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=8,1"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_8_2_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=8,2"
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MDComm_UnitTests
+  NAME MDComm_UnitTests_3D_16_1_1
+  COMM mpi
+  NUM_MPI_PROCS 16
+  ARGS "--teuchos-suppress-startup-banner --numDims=3 --axisCommSizes=16"
+  STANDARD_PASS_OUTPUT
+  )
